--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" >
         <title>Technical Documentation Page</title>
-        <link rel="stylesheet" class="nav-link" href="css/styles.css">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
 
     <body>
@@ -346,7 +346,7 @@
                 <header>Reference</header>
                 <article class="main-article">
                     <ul>
-                        <li>All the documentation in this page is taken from <a class="nav-link" href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide" target="_blank">MDN</a></li>
+                        <li>All the documentation in this page is taken from <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide" target="_blank">MDN</a></li>
                     </ul>
                 </article>
             </section>
